Fixing site header behind content

--- a/public/stylesheets/posts/nashville.css
+++ b/public/stylesheets/posts/nashville.css
@@ -198,7 +198,7 @@
 */
 .posts-show-nashville .site-header {
 	position:relative;
-	z-index:100;
+	z-index:500;
 }
 
 
